# MiroOrca

./: .gitignore  CONTRIBUTING.md  CREDITS.md  QUICKSTART.md  __init__.py  backend_README.md  backend_api__init__.py  backend_services__init__.py  config.py  docker-compose.yml  frontend_README.md  frontend_package.json  graph.py  llm_client.py  logger.py  package.json  pyproject.toml  report.py  run.py  simulation.py  task.py  vite.config.js
docs/: architecture.md
